unpackaged/main/default/objects/Guest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guests (Account)</relationshipLabel>
    <relationshipName>Guests1</relationshipName>
    <type>Lookup</type>
</CustomField>