unpackaged/main/default/objects/Guest__c/fields/Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>