unpackaged/main/default/objects/Guest__c/fields/Enquiries_and_BookingsID__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_and_BookingsID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiries and Bookings</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>