unpackaged/main/default/objects/Guest__c/fields/Guest_Account__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guests</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <type>Lookup</type>
</CustomField>