unpackaged/main/default/objects/Guest__c/fields/Guest_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Guest Email Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>