unpackaged/main/default/objects/Guest__c/fields/Guest_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Last_Name__c</fullName>
    <label>Guest Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>