unpackaged/main/default/objects/Guest__c/fields/Guest_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Guest_Mobile__c</fullName>
    <label>Guest Mobile</label>
    <type>Phone</type>
</CustomField>