unpackaged/main/default/objects/Guest__c/fields/GuestID__c.field-meta.xml
<CustomField>
    <fullName>GuestID__c</fullName>
    <externalId>true</externalId>
    <label>GuestID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>