unpackaged/main/default/objects/Guest__c/fields/Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed__c</fullName>
    <label>Unsubscribed</label>
    <type>TextArea</type>
</CustomField>