unpackaged/main/default/objects/Guest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Guest_First_Name__c</columns>
    <columns>Guest_Last_Name__c</columns>
    <columns>Guest_Account__c</columns>
    <columns>Guest_Phone__c</columns>
    <columns>Guest_Mobile__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>